# jane-street-puzzles

./: .gitignore  .pre-commit-config.yaml  2014-01-sum-of-squares.py  2014-02-hooks.py  2016-05-hooks-2.py  2017-11-block-party.py  2018-06-twenty-four-seven.py  2019-03-twenty-four-seven-2-by-2.py  2019-04-remote-sudoku.py  2019-09-block-party-3.py  2020-02-single-cross.py  2020-10-candy-collectors.py  2020-12-twenty-four-seven-2-by-2-#2.py  2021-01-figurine-figuring.py  2021-04-bracketology-101.py  2021-08-robot-tug-of-war.py  2021-09-knight-moves-4.py  2021-10-robot-swimming-trials.py  2021-12-robot-archery.py  2022-01-hooks-8  2022-01-hooks-8.py  2022-04-almost-magic.py  2022-05-robot-updated-swimming-trials.py  2022-06-block-party-4.py  2022-07-andys-morning-stroll.py  2022-08-new-york-minute.py  2022-10-the-marshy-mess.py  2022-11-pent-up-frustration-2.py  2022-12-die-agony.py  2023-01-lesses-more.py  2023-02-twenty-four-seven-four-in-one.py  2023-03-robot-long-jump.py  2023-04-arc-edge-acreage.py  2023-06-hooks-9.py  2023-07-choco-banana.py  2023-08-single-cross-2.py  2023-10-a-weird-tour.py  2023-11-knight-moves-5.py  2024-02-some-off-squares.py  2024-04-robot-capture-the-flag.py  (+12 more)
.github/workflows/: code-quality.yaml
2014/: 2014-01-sum-of-squares.py  2014-02-hooks.py
2015/: 2015-08-number-cross-2.py  2015-08-number-cross.py
2016/: 2016-03-knight-moves.py  2016-05-hooks-2.py
2017/: 2017-04-knight-moves-2.py  2017-11-block-party.py
2018/: 2018-02-hooks-3.py  2018-06-twenty-four-seven.py  2018-08-hooks-4.py  2018-12-block-party-2.py
2019/: 2019-03-twenty-four-seven-2-by-2.py  2019-04-remote-sudoku.py  2019-06-hooks-5.py  2019-08-knight-moves-3.py  2019-09-block-party-3.py  2019-11-hooks-6.py
2020/: 2020-02-single-cross.py  2020-06-circle-time.py  2020-08-study-and-ponder.py  2020-10-candy-collectors.py  2020-12-twenty-four-seven-2-by-2-2.py  tickers.txt
2021/: 2021-01-figurine-figuring.py  2021-02-hooks-7.py  2021-04-bracketology-101.py  2021-05-past-tens.py  2021-08-robot-tug-of-war.py  2021-09-knight-moves-4.py  2021-10-robot-swimming-trials.py  2021-12-robot-archery.py
2022/: 2022-01-hooks-8.py  2022-02-eldrow.py  2022-03-hidden-warning.py  2022-04-almost-magic.py  2022-05-robot-updated-swimming-trials.py  2022-06-block-party-4.py  2022-07-andys-morning-stroll.py  2022-08-new-york-minute.py  2022-09-pair-dance-2.py  2022-10-the-marshy-mess.py  2022-11-pent-up-frustration-2.py  2022-12-die-agony.py
2022 04 almost magic/: magic.py
2022-04-almost-magic/: formulas.py  magic.py
2022-05-updated-robot-swimming-trials/: swim.py  swim.tex
2023/: 2023-01-lesses-more.py  2023-02-twenty-four-seven-four-in-one.py  2023-03-robot-long-jump.py  2023-04-arc-edge-acreage.py  2023-05-game-night.py  2023-06-hooks-9.py  2023-07-choco-banana.py  2023-08-single-cross-2.py  2023-09-getting-from-a-to-b.py  2023-10-a-weird-tour.py  2023-11-knight-moves-5.py  2023-12-hall-of-mirrors-2.py
2024/: 2024-01-some-f-squares.py  2024-02-some-off-squares.py  2024-03-hooks-10.py  2024-04-robot-capture-the-flag.py  2024-05-number-cross-4.py  2024-06-altered-state.py  2024-07-more-happy-returns.py  2024-08-tree-edge-triage.py  2024-09-fences-2.py  2024-10-knight-moves-6.py  2024-11-beside-the-point.py  2024-12-games-night.py
2025/: 2025-01-somewhat-square-sudoku-ortools.py  2025-02-top-score-give-or-take.py  2025-03-hall-of-mirrors-3.py  2025-04-sum-one-somewhere.py  2025-05-number-cross-5.py  2025-06-some-ones-somewhere.py  2025-07-robot-road-trip.py  2025-08-dogs-playing-poker.py  2025-09-hooks-11.py  2025-10-robot-baseball.py  2025-11-shut-the-box.py  2025-12-robot-javelin.py
utils/: eldrow_wordlist.csv  update_readme.py
utils/stubs/: sympy.pyi
