[project]
name = "jane-street-puzzles"
version = "0.1.0"
description = "My solutions to past Jane Street puzzles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "codetiming>=1.4.0",
    "joblib>=1.4.2",
    "matplotlib>=3.9.2",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pyprune>=0.1.7",
    "pyqt6>=6.7.1",
    "pysmt>=0.9.6",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "sympy>=1.13.3",
    "tabulate>=0.9.0",
    "termcolor>=2.5.0",
    "toolz>=1.0.0",
    "tqdm>=4.66.6",
    "z3-solver>=4.13.3.0",
]

[tool.ruff]
line-length = 120
ignore = [
    "E741",  # ambiguous variable name
    "E731",  # do not assign a lambda expression, use a def
    "B905",  # zip should be strict
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.docformatter]
style = "sphinx"  # Write docstrings in Sphinx style so that docformatter can format them

[tool.bandit]
skips = ["B311"]

[dependency-groups]
dev = [
    "docformatter>=1.7.5",
    "mypy>=1.13.0",
]

[[tool.mypy.overrides]]
module = ["seaborn", "numba", "scipy.ndimage"]
ignore_missing_imports = true
