[project]
name = "jane-street-puzzles"
version = "0.1.0"
description = "My solutions to past Jane Street puzzles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "codetiming>=1.4.0",
    "cpmpy>=0.9.26",
    "matplotlib>=3.9.2",
    "numpy>=2.0.0",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "pysmt>=0.9.6",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "sympy>=1.13.3",
    "tabulate>=0.9.0",
    "termcolor>=2.5.0",
    "toolz>=1.0.0",
    "tqdm>=4.66.6",
    "z3-solver>=4.13.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

# ------------------------------------------------------------------------------
# Linting
# ------------------------------------------------------------------------------

[tool.ruff]
line-length = 120
ignore = [
    "E741",  # ambiguous variable name
    "E731",  # do not assign a lambda expression, use a def
    "B905",  # zip should be strict
]

# Set of rules taken from https://docs.astral.sh/ruff/linter/#rule-selection
[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.bandit]
skips = ["B311"]
